2010-01-26  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Implement profiling support with cProfile,
	Don't mount /sys, /proc, /dev and /dev/pts if they're already mounted,
	Use /proc/sys/kernel/printk instead of dmesg for setting log level,
	Use os.chmod instead of forking chmod.
	* bin/setup.py: 3.1.4

2010-01-22  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Check for /proc and /sys before mounting,
	refactor mounting parts a little.
	* bin/setup.py: Bump to 3.1.3

2010-01-14  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/deluser.py: Add deluser command to easily delete users with COMAR

2010-01-14  Onur Küçük <onur@pardus.org.tr>
	* bin/adduser.py: Add adduser command to easily add users with COMAR

2010-01-08  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Don't call useless is_virtual() method as we don't support
	Xen.

2010-01-06  Onur Küçük <onur@pardus.org.tr>
	* bin/mudur.py: Check if mudur is in live environment from
	/var/run/pardus/livemedia
	* bin/mudur.py: Rename livecd config to live

2009-12-30  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (setSystemLanguage): Don't fail if /etc/env.d/03locale is
	missing.

2009-12-09  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (cleanupVar): Don't remove livemedia file as it will be
	used by our brand new, smart booting mechanism.

2009-11-22  Bahadır Kandemir <bahadir@pardus.org.tr>
	* service.py: Error message if service is missing

2009-11-09  Ozan Çağlayan <ozan@pardus.org.tr>
	* setup.py: Bump to 3.1.1.

2009-11-02  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (mountRootFileSystem): Revert mount -af with the old loop
	to fix /home mounts, separate swap activation.
	* bin/mudur.py (run_async): Fix possible NoneType error.
	* bin/mudur.py: Add support for starting preload daemon,
	* bin/mudur.py: Add methods for turning swap on/off,
	* bin/mudur.py: Add deprecated config option for testing future changes

2009-10-21  Ozan Çağlayan <ozan@pardus.org.tr>